SalesforceGarage/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QBO_CreatedFromQBO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CreatedFromQBO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QBO_Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>QBO_Customer_Id__c</fullName>
        <label>QBO Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QBO_SyncToken__c</fullName>
        <label>SyncToken</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QBO_Sync_With_Quickbooks__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Sync With Quickbooks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <recordTypes>
        <fullName>Client</fullName>
        <active>true</active>
        <label>Client</label>
    </recordTypes>
</CustomObject>